static/css/base.css
body {
    background-color: #f8f8f8;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1;
}

.container.header-container {
    margin-top: 100px;
}

header {
    margin-top: 100px;
}

.message-container {
    position: fixed;
    top: 95px;
    right: 15px;
    z-index: 99999999999;
}

.toast-header, .toast-body {
    background-color: white;
}

.header-success {
    border-top: 4px solid #25A743;
}

.header-warning {
    border-top: 4px solid #FFC008;
}

.header-error {
    border-top: 4px solid #DC3545;
}

.header-info {
    border-top: 4px solid #14A2B8;
}

a.anchor {
    display: block;
    position: relative;
    top: -75px;
    visibility: hidden;
}

.search-panel {
    position: fixed;
    top: 90px;
    z-index: 15;
}

.search-input {
    font-size: 0.9em;
}

a {
    text-decoration: none;
}

.no-hover:hover {
    color: white;
}

.sub-link:hover {
    text-decoration: underline;
}

#hero-img {
    object-fit: contain;
    width: 100%;
    max-height: 70vh;
}

.muted-nav {
    text-decoration: none;
    color: gray;
}

.muted-nav:hover {
    color: black;
}

.account-nav {
    text-decoration: none;
    padding: 8px;
    border: 2px solid black;
    background-color: white;
    color: black;
    border-radius: 5px;
}

.btn-signup {
    text-decoration: none;
    border-radius: 5px;
}

.mobile-nav-item {
    max-width: 300px;
}

.account-nav:hover {
    background-color: black;
    color: white;
}

#nav {
    min-height: 75px;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 10;
}

@media only screen and (min-width: 992px) {
    #nav {
        background: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1));
    }
}

#subnav {
    background-color: white;
    top: 0px;
    position: fixed;
    min-height: 70px;
    padding: 0px;
}

.bag-count, .fas.fa-shopping-basket {
    color: #7308bb;
}

.bag-count:hover, .fas.fa-shopping-basket:hover {
    color: rgba(171,29,224,1);
}

.nav-mobile-border {
    width: 100vw;
    margin-top: 3px;
    height: 6px;
    background: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1));
}

.title-code {
    font-family: 'Do Hyeon', sans-serif;
    font-size: 1.2em;
    color: black;
    letter-spacing: 2px;
}

.title-companion {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 1.3em;
    background: #BB00E8;
    background: -webkit-linear-gradient(to right, #BB00E8 0%, #00B7FF 100%);
    background: -moz-linear-gradient(to right, #BB00E8 0%, #00B7FF 100%);
    background: linear-gradient(to right, #BB00E8 0%, #00B7FF 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

@media only screen and (max-width: 375px) {
    .title-code {
        font-size: 0.8em;
    }

    .title-companion {
        font-size: 0.9em;
    }
}

#hero {
    margin-top: 130px;
}

@media only screen and (min-width: 768px) {
    #hero {
        height: 100vh;
        margin-top: 40px;
    }
}

.hero-underline {
    text-decoration: underline;
    -webkit-text-decoration-color: #F9C620; /* Safari */  
    text-decoration-color: #F9C620;
}

.btn-hero {
    background: linear-gradient(90deg, rgba(171,29,224,1) 0%, rgba(0,180,251,1) 100%);
    color: white;
    font-weight: 500;
    padding: 12px 22px;
    border: none;
}

.btn-hero:hover {
    color: #F9C620;
}

.signup-combo {
    max-width: 500px;
}

@media only screen and (max-width: 576px) {
    #hero-signup {
        width: 100%;
        margin-bottom: 10px;
    }

    #hero-btn {
        border-radius: 5px 5px 5px 5px;
    }
}

.company-logo {
    max-width: 100px;
    height: 50px;
    object-fit: contain;
}

.services-bg {
    background: rgb(171,29,224);
    background: linear-gradient(90deg, rgba(171,29,224,1) 0%, rgba(0,180,251,1) 100%);
    padding: 15px;
}

.service-card {
    background-color: white;
    border-radius: 5px;
    height: 100%;
}

.service-detail {
    background-color: white;
    border: none;
}

.service-points {
    font-size: 14px;
    text-align: left;
}

.service-description {
    height: 135px;
}

.testimonial-block {
    background-color: white;
    padding: 15px;
    border: 2px solid;
    border-image-slice: 1;
    border-width: 2px;
    border-image-source: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1));
}

.btn-none {
    border: none;
    background: none;
}

#nextPage {
    border: 1px dashed #777777;
    padding: 10px;
    width: 100%;
    margin-top: 10px;
    font-size: 18px;
}

#nextPage:hover {
    background-color: white;
}

#nextPage:disabled:hover {
    background: none;
}

.stay-together {
    display: inline-block;
}

.service-container {
    border: 2px solid;
    border-image-slice: 1;
    border-width: 2px;
    border-image-source: linear-gradient(to left, rgba(171,29,224,1), rgba(0,180,251,1));
    border-radius: 10px;
    background-color: white;
    padding: 10px;
}

.datepicker {
    width: 65px;
    height: 100%;
    background-color: white;
    display: inline-block;
    border: 2px dotted black;
    cursor: pointer;
    position: relative;
}

.datepicker-enabled {
    border: 3px solid rgb(92, 92, 92);
}

label.datepicker-disabled {
    background-color: rgb(221, 221, 221);
    cursor: not-allowed;
}

label.datepicker-disabled:hover {
    border: 2px dotted black;
    cursor: not-allowed;
}

.datepicker-disabled > span {
    color: gray;
}

.datepicker:hover {
    border: 2px solid black;
}

.date-radio {
    visibility: hidden;
    position: absolute;
}

.datepicker-text {
    display: block;
    text-align: center;
    font-weight: 600;
    padding: 2.5px;
    line-height: 20px;
}

.day-title {
    font-size: 18px;
    color: red;
}

.date-title {
    font-size: 26px;
    color: black;
}

.month-title {
    font-size: 18px;
    color: black;
}

.img-quote {
    border-radius: 50%;
}

.update-link, .remove-item {
    cursor: pointer;
}

.mobile-table-container {
    padding: 15px;
    background-color: white;
    border-radius: 8px;
    border: 1px solid silver;
    text-align: center;
}

#order-chain {
    width: 100%;
    height: 50px;
}

.point-col {
    width: 25px;
}

.text-col {
    /* width: 130px; */
    width: 140px;
}

.text-link {
    width: calc(15vw - 115px);
}

.link-col {
    min-width: 15vw;
}

.text-row {
    width: 60vw;
}

.chain-points {
    width: 25px;
    height: 25px;
    display: inline-block;
    box-shadow: 0 0 0 5px rgba(171,29,224,1);
    background-color: white;
    border-radius: 50%;
    z-index: 1;
}

.chain-link {
    z-index: -1;
    display: inline-block;
    position: relative;
}

.chain-link-horizontal {
    width: 100%;
    height: 5px;
    bottom: 10%;
    background: linear-gradient(90deg, rgba(171,29,224,1) 0%, rgb(251, 0, 238) 50%, rgba(171,29,224,1) 100%);
}

.chain-link-vertical {
    width: 5px;
    height: 50px;
    bottom: 1px;
    display: block;
    margin: auto;
    background: linear-gradient(0deg, rgba(171,29,224,1) 0%, rgb(251, 0, 238) 50%, rgba(171,29,224,1) 100%);
}

.link-text-vertical {
    height: 81px;
}

.inactive-point {
    box-shadow: 0 0 0 5px #f4ddfc;
}

.inactive-link {
    background: #f4ddfc;
}

.point-text {
    position: relative;
    top: 35px;
}

#jitsi_container {
    height: calc(100vh - 230px);
}

/* input[type='checkbox'].convert-toggle { */
    /* background-color: red; */
/* } */

/* .convert-toggle + label { */
    /* background-color: yellow; */
/* } */

footer {
    color: white;
}

